crates/ferrum-interfaces/tests/ui/vnext/fail/operation_failure_is_not_deserialize.rs
use ferrum_interfaces::vnext::OperationFailure;

fn main() {
    let _: OperationFailure = serde_json::from_str("{}").unwrap();
}
