crates/ferrum-interfaces/tests/ui/vnext/fail/operation_failure_is_not_deserialize.stderr
error[E0277]: the trait bound `OperationFailure: serde::Deserialize<'de>` is not satisfied
 --> tests/ui/vnext/fail/operation_failure_is_not_deserialize.rs:4:31
  |
4 |     let _: OperationFailure = serde_json::from_str("{}").unwrap();
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `serde_core::de::Deserialize<'_>` is not implemented for `OperationFailure`
  |
  = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `OperationFailure` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `serde_core::de::Deserialize<'de>`:
            &'a Path
            &'a [u8]
            &'a str
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
          and $N others
note: required by a bound in `serde_json::from_str`
 --> $CARGO/serde_json-$VERSION/src/de.rs
  |
  | pub fn from_str<'a, T>(s: &'a str) -> Result<T>
  |        -------- required by a bound in this function
  | where
  |     T: de::Deserialize<'a>,
  |        ^^^^^^^^^^^^^^^^^^^ required by this bound in `from_str`
